tools/cubism-bindgen/fixtures/expected/x86_64-unknown-linux-gnu.rs

/* automatically generated by rust-bindgen 0.72.1 */

pub type csmByte = ::core::ffi::c_uchar;
pub type csmBool = ::core::ffi::c_int;
pub type csmInt32 = ::core::ffi::c_int;
pub type csmUint32 = ::core::ffi::c_uint;
pub type csmFloat32 = f32;
pub type csmSizeInt = ::core::ffi::c_ulonglong;
pub type csmVersion = csmUint32;
pub type csmFlags = csmByte;
pub type csmParameterType = csmInt32;
pub type csmLogFunction = ::core::option::Option<
    unsafe extern "C" fn(message: *const ::core::ffi::c_char),
>;
pub type _bindgen_ty_1 = ::core::ffi::c_uint;
pub type csmMocVersion = csmUint32;
pub type _bindgen_ty_2 = ::core::ffi::c_uint;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct csmVector2 {
    pub X: csmFloat32,
    pub Y: csmFloat32,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct csmVector4 {
    pub X: csmFloat32,
    pub Y: csmFloat32,
    pub Z: csmFloat32,
    pub W: csmFloat32,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct csmMoc {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct csmModel {
    _unused: [u8; 0],
}
pub const csmMocVersion_Unknown: _bindgen_ty_1 = 0;
pub const csmMocVersion_50: _bindgen_ty_1 = 5;
pub const csmMocVersion_53: _bindgen_ty_1 = 6;
pub const csmAlignofMoc: _bindgen_ty_2 = 64;
pub const csmAlignofModel: _bindgen_ty_2 = 16;
unsafe extern "C" {
    pub fn csmGetVersion() -> csmVersion;
    pub fn csmGetLatestMocVersion() -> csmMocVersion;
    pub fn csmGetMocVersion(
        mocBytes: *const ::core::ffi::c_void,
        mocSize: csmUint32,
    ) -> csmMocVersion;
    pub fn csmHasMocConsistency(
        mocBytes: *mut ::core::ffi::c_void,
        mocSize: csmUint32,
    ) -> csmBool;
    pub fn csmReviveMocInPlace(
        mocBytes: *mut ::core::ffi::c_void,
        mocSize: csmUint32,
    ) -> *mut csmMoc;
    pub fn csmGetSizeofModel(moc: *const csmMoc) -> csmUint32;
    pub fn csmInitializeModelInPlace(
        moc: *const csmMoc,
        modelMemory: *mut ::core::ffi::c_void,
        modelSize: csmUint32,
    ) -> *mut csmModel;
    pub fn csmUpdateModel(model: *mut csmModel);
    pub fn csmGetRenderOrders(model: *const csmModel) -> *const csmInt32;
    pub fn csmReadCanvasInfo(
        model: *const csmModel,
        outSizeInPixels: *mut csmVector2,
        outOriginInPixels: *mut csmVector2,
        outPixelsPerUnit: *mut csmFloat32,
    );
    pub fn csmGetParameterCount(model: *const csmModel) -> csmInt32;
    pub fn csmGetParameterIds(model: *const csmModel) -> *mut *const ::core::ffi::c_char;
    pub fn csmGetParameterTypes(model: *const csmModel) -> *const csmParameterType;
    pub fn csmGetParameterMinimumValues(model: *const csmModel) -> *const csmFloat32;
    pub fn csmGetParameterMaximumValues(model: *const csmModel) -> *const csmFloat32;
    pub fn csmGetParameterDefaultValues(model: *const csmModel) -> *const csmFloat32;
    pub fn csmGetParameterValues(model: *mut csmModel) -> *mut csmFloat32;
    pub fn csmGetPartCount(model: *const csmModel) -> csmInt32;
    pub fn csmGetPartIds(model: *const csmModel) -> *mut *const ::core::ffi::c_char;
    pub fn csmGetPartOpacities(model: *mut csmModel) -> *mut csmFloat32;
    pub fn csmGetPartOffscreenIndices(model: *const csmModel) -> *const csmInt32;
    pub fn csmGetDrawableCount(model: *const csmModel) -> csmInt32;
    pub fn csmGetDrawableIds(model: *const csmModel) -> *mut *const ::core::ffi::c_char;
    pub fn csmGetDrawableConstantFlags(model: *const csmModel) -> *const csmFlags;
    pub fn csmGetDrawableDynamicFlags(model: *const csmModel) -> *const csmFlags;
    pub fn csmGetDrawableBlendModes(model: *const csmModel) -> *const csmInt32;
    pub fn csmGetDrawableTextureIndices(model: *const csmModel) -> *const csmInt32;
    pub fn csmGetDrawableDrawOrders(model: *const csmModel) -> *const csmInt32;
    pub fn csmGetDrawableOpacities(model: *const csmModel) -> *const csmFloat32;
    pub fn csmGetDrawableMaskCounts(model: *const csmModel) -> *const csmInt32;
    pub fn csmGetDrawableMasks(model: *const csmModel) -> *mut *const csmInt32;
    pub fn csmGetDrawableVertexCounts(model: *const csmModel) -> *const csmInt32;
    pub fn csmGetDrawableVertexPositions(
        model: *const csmModel,
    ) -> *mut *const csmVector2;
    pub fn csmGetDrawableVertexUvs(model: *const csmModel) -> *mut *const csmVector2;
    pub fn csmGetDrawableIndexCounts(model: *const csmModel) -> *const csmInt32;
    pub fn csmGetDrawableIndices(
        model: *const csmModel,
    ) -> *mut *const ::core::ffi::c_ushort;
    pub fn csmGetDrawableMultiplyColors(model: *const csmModel) -> *const csmVector4;
    pub fn csmGetDrawableScreenColors(model: *const csmModel) -> *const csmVector4;
    pub fn csmGetDrawableParentPartIndices(model: *const csmModel) -> *const csmInt32;
    pub fn csmResetDrawableDynamicFlags(model: *mut csmModel);
    pub fn csmGetOffscreenCount(model: *const csmModel) -> csmInt32;
    pub fn csmGetOffscreenBlendModes(model: *const csmModel) -> *const csmInt32;
    pub fn csmGetOffscreenOpacities(model: *const csmModel) -> *const csmFloat32;
    pub fn csmGetOffscreenOwnerIndices(model: *const csmModel) -> *const csmInt32;
    pub fn csmGetOffscreenMultiplyColors(model: *const csmModel) -> *const csmVector4;
    pub fn csmGetOffscreenScreenColors(model: *const csmModel) -> *const csmVector4;
    pub fn csmGetOffscreenMaskCounts(model: *const csmModel) -> *const csmInt32;
    pub fn csmGetOffscreenMasks(model: *const csmModel) -> *mut *const csmInt32;
    pub fn csmGetOffscreenConstantFlags(model: *const csmModel) -> *const csmFlags;
    pub fn csmSetLogFunction(handler: csmLogFunction);
}
